--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,17 +1,10 @@
 trigger:
-  branches:
-    include:
-    - main
-  paths:
-    include:
-    - azure-pipelines.yaml
-    exclude:
-    - Readme.md
+- main
 
 resources:
 - repo: self
 
-variables:
+variables:  
   IMAGE_NAME: houssemdocker/album-backend-api
   CONTAINERAPPS_APP: album-backend-api
   CONTAINERAPPS_ENVIRONMENT: aca-environment
@@ -34,12 +27,13 @@ stages:
         command: build
         dockerfile: '$(Build.SourcesDirectory)/backend_api/backend_api_csharp/Dockerfile'
         repository: $(IMAGE_NAME)
-        tags: $(TAG)
+        tags: |
+          $(TAG)
 
     - task: Docker@2
       displayName: Push image to Docker Hub
       inputs:
-        containerRegistry: 'dockerhub-connection'
+        containerRegistry: 'Docker-connection'
         repository: $(IMAGE_NAME)
         command: 'push'
         tags: '$(TAG)'
@@ -56,7 +50,7 @@ stages:
     - task: AzureContainerApps@1
       displayName: Deploy new container version
       inputs:
-        azureSubscription: 'azure-connection'
+        azureSubscription: 'testapp'
         imageToDeploy: '$(IMAGE_NAME):$(TAG)'
         containerAppName: '$(CONTAINERAPPS_APP)'
         resourceGroup: '$(RESOURCE_GROUP)'
